--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   </style>
 
   <!-- Botón para abrir modal -->
-  <button id="abrir-calculadora">Abrir Calculadora 14 - TMPE</button>
+  <button id="abrir-calculadora">Abrir Calculadora 14 - TMPE - B</button>
 
   <!-- Modal -->
   <div id="modal-calculadora" class="modal">
